# psge

./: .gitignore  00_OVERVIEW.md  01_PRD.md  02_ARCHITECTURE.md  03_DIRECTORY_STRUCTURE.md  04_VARIANT_PANEL.md  05_MECHANISM_TAXONOMY.md  06_VALIDATION_PLAN.md  07_REFERENCES.md  08_ARCHITECT_DESIGN.md  09_PLAN.md  99_ORIGINAL_PSGE_Project_Context.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/sources/: ppox_sources.yaml  ppox_variant_evidence.yaml
data/testdata/variants/: ppox_panel.yaml  ppox_panel_expected.yaml  ppox_panel_expected_pdb_first_foldx.yaml
docs/: COMMIT_PREP_REVIEW.md  CONTRIBUTING.md  DOCUMENTATION_ASSESSMENT.md  M7_PETE_OVERVIEW.md  OUTPUT_SCHEMA.md  PHASE1_5_REMAP.md  PHASE1_6C_SUPERVISOR_REPORT.md  PHASE1_6D_PROMPT.md  PHASE1_6D_SUPERVISOR_REPORT.md  PHASE1_6E_EVIDENCE_SOURCE_LAYER.md  PHASE1_6E_SUPERVISOR_REPORT.md  PHASE1_6_DELIVERABLE_CHECKLIST.md  PHASE1_6_SASA_INVESTIGATION.md  PHASE1_6_STATE_CAPTURE.md  SUPERVISOR_REPORT.md  USER_GUIDE.md  VALIDATION_LOGIC.md  VALIDATION_SCIENCE.md
scripts/: diagnose_sasa_r59w.py  run_logic_validation.py
src/psge/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_foldx.py  test_mechanism_reporting.py  test_panel.py  test_panel_foldx.py  test_panel_t2.py  test_preflight.py  test_report_evidence_sources.py  test_sasa.py  test_sequence.py  test_sources.py  test_stability_bands.py  test_stability_context.py  test_structure_cache.py  test_variant_evidence.py
tests/fixtures/: foldx_dif_repair.fxout  foldx_dif_sample.fxout
(+47 files in other folders)
